force-app/main/default/objects/VerdeAmancoKitItem__c/VerdeAmancoKitItem__c.object-meta.xml
<CustomObject>
    <label>Item do Kit Verde Amanco</label>
    <nameField>
        <label>Nome de Item do Kit Verde Amanco</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens do Kit Verde Amanco</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>