force-app/main/default/objects/VerdeAmancoKitItem__c/fields/MaximumAmountNmb__c.field-meta.xml
<CustomField>
    <fullName>MaximumAmountNmb__c</fullName>
    <label>Quantidade máxima</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>