force-app/main/default/objects/VerdeAmancoKitItem__c/fields/SAPCodeTxt__c.field-meta.xml
<CustomField>
    <fullName>SAPCodeTxt__c</fullName>
    <externalId>true</externalId>
    <label>Código Mundial</label>
    <length>80</length>
    <type>Text</type>
</CustomField>