force-app/main/default/objects/VerdeAmancoKitItem__c/fields/VerdeAmancoKitLkp__c.field-meta.xml
<CustomField>
    <fullName>VerdeAmancoKitLkp__c</fullName>
    <label>Kit Verde Amanco</label>
    <referenceTo>VerdeAmancoKit__c</referenceTo>
    <relationshipLabel>Itens do Kit Verde Amanco</relationshipLabel>
    <relationshipName>VerdeAmancoKitItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>